--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="JRE_LIB"/>
+	<classpathentry kind="lib" path="/home/john/Eclipse/configuration/plugins/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin2"/>
 </classpath>
